READMEの機能セクションを追加し、FontAwesomeアイコンライブラリを導入。ヘッダーコンポーネントを作成し、ページに統合。投稿フォームにローディングインジケーターを追加し、スタイルを改善。

--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "postinstall": "prisma generate --schema=prisma/schema.prisma"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
+    "@fortawesome/free-brands-svg-icons": "^6.7.1",
+    "@fortawesome/free-regular-svg-icons": "^6.7.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@prisma/client": "^5.22.0",
     "next": "15.0.3",
     "prisma": "^5.22.0",
@@ -20,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-fontawesome": "^1.6.8",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
